<?xml version="1.0"?>
<package format="2">
  <name>uuv_sensor_msgs</name>
  <version>0.0.0</version>
  <description>
	  The package contains message definitions for underwater sensor not 
	  available under the regular sensor_msgs packet.
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/uuv_sensor_msgs</url> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
